--- a/index.html
+++ b/index.html
@@ -1,7 +1,103 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Privacy Policy</h1>
+<p>
+  This privacy policy applies to all applications developed by XCS Technologies. 
+  Please review the following information about what we collect and how we use it. 
+  By accessing and/or using this XCS Technologies website or any XCS Technologies product 
+  or service available on or through this website, you are accepting the practices described 
+  in this Privacy Policy. XCS Technologies strongly believes in keeping your personal information 
+  confidential. The following policy describes what information we collect and how it is used and shared 
+</p>
+  <h2>Information Collected</h2>
+  <p>
+    XCS Technologies may collect personally identifiable information, such as your surname, first name, email address. 
+    Your personal information may be kept in identifiable or aggregate form (such that individuals cannot be identified).
+  </p>
+  <h2>Cookies/IP Address</h2>
+  <p>
+    Cookies: a cookie is a small text file, containing such information as your IP address and operating system, 
+    that is stored on your computer's hard drive and which helps us to recognize your browser and improve your online 
+    experience. Cookies do not contain any personal information. Browsers can be configured to inform you when a cookie 
+    is received.This allows you to accept or decline cookies.
+  </p>
+  <h2>Use Of Collected Information</h2>
+  <p>
+    We use the Information we obtain from or concerning you or your computer or device to provide XCS 
+    Technologies products and services, fulfill your requests, improve our products and services, 
+    personalize and tailor your experience on XCS Technologies, 
+    operate our business, and understand how users are engaging with XCS Technologies.
+  </p>
+  <p>
+    In addition, we may use Information from or concerning you or your computer or device to 
+    facilitate the delivery of content or advertisements that we believe may be of interest to you, 
+    or to communicate with you about new or existing products and services or special offers. 
+    For example, we may periodically send promotional materials or 
+    notifications related to our products and services to the email address associated with your account.
+  </p>
+  <h2>User Data</h2>
+  <p>
+    You agree that in order to provide services to you which you have requested including relevant 
+    content and advertising, we may exchange information that we collect from you with third parties 
+    who help us perform these tasks and provide these products and services including UDID, MAC address, 
+    OpenUDID, Secure UDID, ODIN1, information about your device systems, 
+    application software and peripherals, and the country setting on the device.
+  </p>
+  <h2>Analytics Services</h2>
+  <p>
+    In addition, XCS Technologies uses third party analytics providers and products to obtain, 
+    compile and analyze Information about how users are using and interacting with XCS Technologies. 
+    XCS Technologies may provide Information to these analytics providers for the purpose of obtaining 
+    statistics and other information about how users are using and interacting with XCS Technologies. 
+    These analytics providers may use tracking techniques other than HTTP cookies to recognize your 
+    computer or device and/or to collect or compile this information. These techniques may be used directly 
+    on XCS Technologies. XCS Technologies has no responsibility for the technologies, tools or practices of 
+    the third parties that providing analytics products and services to XCS Technologies. Please also keep in 
+    mind that your web browser may not permit you to block the use of these techniques, and that browser 
+    settings that block conventional cookies may have no effect on such techniques.
+  </p>
+  <h2>Links To Third-Party Sites</h2>
+  <p>
+   The XCS Technologies website may contain links to other websites over which XCS Technologies exercises no 
+    control and which are not covered by this privacy policy. If you use a link on our website to access 
+    other sites, the operators of such sites may collect personal 
+    information for their own needs and in accordance with their own privacy policy.
+  </p>
+  <h2>Third Party Advertising</h2>
+  <p>
+   We allow third-party companies to serve ads and/or collect certain anonymous information when you visit our website.
+    These companies may use non-personally identifiable information (e.g., click stream information, browser type, 
+    time and date, subject of advertisements clicked or scrolled over) during your visits to this and other Websites 
+    in order to provide advertisements about goods and services likely to be of greater interest to you. 
+    These companies typically use a cookie or third party web beacon to collect this information.
+  </p>
+  <h2>Children's Guidelines</h2>
+  <p>
+   This website is directed at adults, not children under the age of 13, and we do not seek to collect 
+    from children online contact information or distribution to third parties any 
+    personally identifiable information from children or entice children to divulge information to us.
+  </p>
+  <h2>Data Security</h2>
+  <p>
+   Since no data transmitted over Internet or stored on Internet servers can be guaranteed to be absolutely secure, 
+    XCS Technologies cannot ensure or warrant the security of any personally identifiable information you are transmitting 
+    to the websites or posting it on non-public (restricted or private) pages. You understand and acknowledge that the 
+    submission of any such information by you via the Internet or posting it on non-public (restricted or private) 
+    pages is at our own risk. Once XCS Technologies receives your information it makes efforts to ensure its security 
+    on its platform and websites. To prevent unauthorized access, maintain data accuracy, and ensure the correct use of 
+    information,XCS Technologies maintains appropriate physical, electronic, and procedural safeguards.
+  </p>
+  <h2>Changes In Our Privacy Policy</h2>
+  <p>
+   XCS Technologies reserves the right to update and revise this privacy policy from time to time to reflect 
+    changes in legislation or any other developments. 
+    Any changes made to our privacy policy will be published on this page, containing the "last updated" date.
+  </p>
+  <h2>Contact Us</h2>
+  <p>
+   If you have any questions, complaints, or comments regarding this Privacy Policy or our information collection practices, 
+    please contact us at contact (at) XCS Technologies.com
+  </p>
 </body>
 </html>
