--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <body>
 <h1>Privacy Policy</h1>
 <p>
-  This privacy policy applies to all applications developed by XCS Technologies. 
+  This privacy policy applies to all applications developed by <strong>yourvideoplay</strong>. 
   Please review the following information about what we collect and how we use it. 
-  By accessing and/or using this XCS Technologies website or any XCS Technologies product 
+  By accessing and/or using this <strong>yourvideoplay</strong> website or any <strong>yourvideoplay</strong> product 
   or service available on or through this website, you are accepting the practices described 
-  in this Privacy Policy. XCS Technologies strongly believes in keeping your personal information 
+  in this Privacy Policy. <strong>yourvideoplay</strong> strongly believes in keeping your personal information 
   confidential. The following policy describes what information we collect and how it is used and shared 
 </p>
   <h2>Information Collected</h2>
   <p>
-    XCS Technologies may collect personally identifiable information, such as your surname, first name, email address. 
+    <strong>yourvideoplay</strong> may collect personally identifiable information, such as your surname, first name, email address. 
     Your personal information may be kept in identifiable or aggregate form (such that individuals cannot be identified).
   </p>
   <h2>Cookies/IP Address</h2>
@@ -26,8 +26,8 @@
   <p>
     We use the Information we obtain from or concerning you or your computer or device to provide XCS 
     Technologies products and services, fulfill your requests, improve our products and services, 
-    personalize and tailor your experience on XCS Technologies, 
-    operate our business, and understand how users are engaging with XCS Technologies.
+    personalize and tailor your experience on <strong>yourvideoplay</strong>, 
+    operate our business, and understand how users are engaging with <strong>yourvideoplay</strong>.
   </p>
   <p>
     In addition, we may use Information from or concerning you or your computer or device to 
@@ -46,20 +46,20 @@
   </p>
   <h2>Analytics Services</h2>
   <p>
-    In addition, XCS Technologies uses third party analytics providers and products to obtain, 
-    compile and analyze Information about how users are using and interacting with XCS Technologies. 
-    XCS Technologies may provide Information to these analytics providers for the purpose of obtaining 
-    statistics and other information about how users are using and interacting with XCS Technologies. 
+    In addition, <strong>yourvideoplay</strong> uses third party analytics providers and products to obtain, 
+    compile and analyze Information about how users are using and interacting with <strong>yourvideoplay</strong>. 
+    <strong>yourvideoplay</strong> may provide Information to these analytics providers for the purpose of obtaining 
+    statistics and other information about how users are using and interacting with <strong>yourvideoplay</strong>. 
     These analytics providers may use tracking techniques other than HTTP cookies to recognize your 
     computer or device and/or to collect or compile this information. These techniques may be used directly 
-    on XCS Technologies. XCS Technologies has no responsibility for the technologies, tools or practices of 
-    the third parties that providing analytics products and services to XCS Technologies. Please also keep in 
+    on <strong>yourvideoplay</strong>. <strong>yourvideoplay</strong> has no responsibility for the technologies, tools or practices of 
+    the third parties that providing analytics products and services to <strong>yourvideoplay</strong>. Please also keep in 
     mind that your web browser may not permit you to block the use of these techniques, and that browser 
     settings that block conventional cookies may have no effect on such techniques.
   </p>
   <h2>Links To Third-Party Sites</h2>
   <p>
-   The XCS Technologies website may contain links to other websites over which XCS Technologies exercises no 
+   The <strong>yourvideoplay</strong> website may contain links to other websites over which <strong>yourvideoplay</strong> exercises no 
     control and which are not covered by this privacy policy. If you use a link on our website to access 
     other sites, the operators of such sites may collect personal 
     information for their own needs and in accordance with their own privacy policy.
@@ -81,23 +81,19 @@
   <h2>Data Security</h2>
   <p>
    Since no data transmitted over Internet or stored on Internet servers can be guaranteed to be absolutely secure, 
-    XCS Technologies cannot ensure or warrant the security of any personally identifiable information you are transmitting 
+    <strong>yourvideoplay</strong> cannot ensure or warrant the security of any personally identifiable information you are transmitting 
     to the websites or posting it on non-public (restricted or private) pages. You understand and acknowledge that the 
     submission of any such information by you via the Internet or posting it on non-public (restricted or private) 
-    pages is at our own risk. Once XCS Technologies receives your information it makes efforts to ensure its security 
+    pages is at our own risk. Once <strong>yourvideoplay</strong> receives your information it makes efforts to ensure its security 
     on its platform and websites. To prevent unauthorized access, maintain data accuracy, and ensure the correct use of 
-    information,XCS Technologies maintains appropriate physical, electronic, and procedural safeguards.
+    information,<strong>yourvideoplay</strong> maintains appropriate physical, electronic, and procedural safeguards.
   </p>
   <h2>Changes In Our Privacy Policy</h2>
   <p>
-   XCS Technologies reserves the right to update and revise this privacy policy from time to time to reflect 
+   <strong>yourvideoplay</strong> reserves the right to update and revise this privacy policy from time to time to reflect 
     changes in legislation or any other developments. 
     Any changes made to our privacy policy will be published on this page, containing the "last updated" date.
   </p>
-  <h2>Contact Us</h2>
-  <p>
-   If you have any questions, complaints, or comments regarding this Privacy Policy or our information collection practices, 
-    please contact us at contact (at) XCS Technologies.com
-  </p>
+  
 </body>
 </html>
